--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -6,6 +6,13 @@ div{
  
 }
 
-#id1{   color:  blue; font-size: 36;}
+#id1{   color:  blue; font-size: 36px;}
 
+.class1 {
+    font-size: 24px;
+}
+
+#id2{
+    color: lightgreen; font-size: 24; font-weight: 700;
+}
 
