--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -13,6 +13,6 @@ div{
 }
 
 #id2{
-    color: lightgreen; font-size: 24; font-weight: 700;
+    background-color: lightgreen; font-size: 24; font-weight: 700;
 }
 
