--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -3,19 +3,16 @@
   color: hsl(0, 100%, 50%);
 }
 
-.small-para {
-  font-size: 14px;
-}
 
 .para {
-  font-size: 22px;
+  font-size: 22px; color: red;
 }
 
-.confirm {
-  background: green;
-  color: white;
-  font-weight: bold;
-} 
+.small-para {
+  font-size: 14px; 
+}
+
+
 
 .button {
   background-color: rgb(255, 255, 255);
@@ -23,12 +20,18 @@
   font-size: 20px;
 }
 
+.confirm {
+  background-color: green;
+  color: white;
+  font-weight: bold;
+} 
+
+.text {
+  color: green;
+  font-size: 22px;
+}
+
 .child {
   color: red;
   font-size: 14px;
-}
-
-div.text {
-  color: green;
-  font-size: 22px;
 }
