--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -6,10 +6,22 @@ img {
   width: 100px;
   height: 100px;
 }
+.plants {
+  display: flex;
+  gap: 52px;
+}
+.plant_info {
+  text-align: center;
+  max-width: 200px;
 
+}
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
+
 }
 
 /* do not edit this footer */
