--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -13,15 +13,32 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
 }
 
+.text {
+  font-size: 14px ;
+  margin: 8px 0px 16px;
+}
 .modal {
   background: white;
-  width: 480px;
+  max-width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 16px;
+  flex: 1;
+}
+.left {
+  margin-right: 16px;
 }
 
+.Head_Icon {
+  display: flex;
+  justify-content: space-between;
+  font-size: 20px;
+  align-items: center;
+}
 .icon {
   color: royalblue;
   font-size: 26px;
