odin project home page

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,10 +5,24 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
-
+a {
+  text-decoration: none;
+  color: #666;
+}
+a:link {text-decoration: none;}
 img {
   width: 600px;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  margin: 0px
+  padding: 0px;
+  gap: 16px;
 }
 
 button {
@@ -16,6 +30,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
@@ -25,3 +40,24 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+
+}
+
+.content {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex: 1;
+
+}
+
+.footer
+{background: #eee;}
