--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,22 +2,37 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
+.body {
+  display: flex;
+  flex: 1;
+}
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32;
+  font-weight: 900;
+  padding: 0px 16px;
+  display: flex;
+  align-items: center;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .sidebar {
-  width: 300px;
+  min-width: 300px;
   background: royalblue;
 }
 
@@ -25,4 +40,26 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  flex-wrap: wrap;
+  padding: 16px;
+  margin: 16px;
+  width: 300px;
 }
+
+a {
+  text-decoration: none;
+  font-size: 24px;
+  color: white;
+}
+
+ul {
+  list-style-type: none;
+}
+li {
+  padding-bottom: 16px;
+}
+
+.cards {
+  display: flex;
+  padding: 32px;
+  flex-wrap: wrap;
